syntax = "proto3";

package kessel.inventory.v1beta1;

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message PolicyRelationship {
  
  // the aggregate status of the cluster
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_OTHER = 1;
    STATUS_NON_COMPLIANT = 2;
    STATUS_COMPLIANT = 3;
  }

  // The type of Resource relationship
  string relationship_type = 251000036;

  // The resource ID assigned to the resource by Kessel Asset Inventory. A
  // reporter alias may also be used as a resource ID using the format:
  // \"hcrn:<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\"
  int64 policy_id = 225679544;

  // The resource ID assigned to the resource by Kessel Asset Inventory. A
  // reporter alias may also be used as a resource ID using the format:
  // \"hcrn:<reporter_data.reporter_type>:<reporter_data.reporter_id>::<reporter_data.resourceId_alias>\"
  int64 k8s_cluster_id = 240280960;

  Status status = 355610639;
}
